Correções e melhorias nos testes